// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JS: Combined creates a TemplateNativeModule.js 1`] = `
"//  Created by react-native-create-bridge

import { NativeModules } from 'react-native'

const { TestModule } = NativeModules

export default {
  exampleMethod () {
    return TestModule.exampleMethod()
  },

  EXAMPLE_CONSTANT: TestModule.EXAMPLE_CONSTANT
}
"
`;

exports[`JS: Combined creates a TemplateNativeView.js 1`] = `
"//  Created by react-native-create-bridge

import React, { Component } from 'react'
import { requireNativeComponent } from 'react-native'

const TestModule = requireNativeComponent('TestModule', TestModuleView)

export default class TestModuleView extends Component {
  render () {
    return <TestModule {...this.props} />
  }
}

TestModuleView.propTypes = {
  exampleProp: React.PropTypes.any
}
"
`;

exports[`JS: Native Modules creates a TemplateNativeModule.js 1`] = `
"//  Created by react-native-create-bridge

import { NativeModules } from 'react-native'

const { TestModule } = NativeModules

export default {
  exampleMethod () {
    return TestModule.exampleMethod()
  },

  EXAMPLE_CONSTANT: TestModule.EXAMPLE_CONSTANT
}
"
`;

exports[`JS: UI Components creates a TemplateNativeView.js 1`] = `
"//  Created by react-native-create-bridge

import React, { Component } from 'react'
import { requireNativeComponent } from 'react-native'

const TestModule = requireNativeComponent('TestModule', TestModuleView)

export default class TestModuleView extends Component {
  render () {
    return <TestModule {...this.props} />
  }
}

TestModuleView.propTypes = {
  exampleProp: React.PropTypes.string
}
"
`;
